--- a/JMapper Framework/pom.xml
+++ b/JMapper Framework/pom.xml
@@ -32,27 +32,21 @@
     </scm>
     <properties>
         <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
-        <sonar.organization>windpanda</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <developers>
         <developer>
-            <id>windpanda</id>
-            <name>Windpanda</name>
-            <email>441538790@qq.com</email>
-            <roles>
-                <role>author</role>
-            </roles>
+            <name>caobinlight</name>
         </developer>
     </developers>
 
     <distributionManagement>
         <snapshotRepository>
-            <id>ossrh</id>
+            <id>jmapper</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>ossrh</id>
+            <id>jmapper</id>
             <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
@@ -65,8 +59,8 @@
                 <version>1.6.8</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <serverId>jmapper</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
@@ -74,9 +68,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -148,7 +139,7 @@
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
+            <version>0.10.2</version>
         </dependency>
 
         <dependency>
@@ -188,11 +179,7 @@
             <version>1.4.19</version>
         </dependency>
 
-        <dependency>
-            <groupId>net.sf.kxml</groupId>
-            <artifactId>kxml2</artifactId>
-            <version>2.3.0</version>
-        </dependency>
+
     </dependencies>
 
 </project>
